employ edit left

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,8 +12,108 @@
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>LoginServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>home</display-name>
+ 	<servlet-name>home</servlet-name>
+  	<servlet-class>home</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>addemp</display-name>
+  	<servlet-name>addemp</servlet-name>
+  	<servlet-class>addemp</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>adddept</display-name>
+  	<servlet-name>adddept</servlet-name>
+  	<servlet-class>adddept</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>addrl</display-name>
+  	<servlet-name>addrl</servlet-name>
+  	<servlet-class>addrl</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>addcom</display-name>
+  	<servlet-name>addcom</servlet-name>
+  	<servlet-class>addcom</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>comp</display-name>
+  	<servlet-name>comp</servlet-name>
+  	<servlet-class>comp</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>viewcom</display-name>
+  	<servlet-name>viewcom</servlet-name>
+  	<servlet-class>viewcom</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>delemp</display-name>
+  	<servlet-name>delemp</servlet-name>
+  	<servlet-class>delemp</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>editemp</display-name>
+  	<servlet-name>editemp</servlet-name>
+  	<servlet-class>editemp</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+  	<servlet-name>home</servlet-name>
+  	<url-pattern>/home</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>addemp</servlet-name>
+  	<url-pattern>/addemp</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>adddept</servlet-name>
+  	<url-pattern>/adddept</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>addrl</servlet-name>
+  	<url-pattern>/addrl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>addcom</servlet-name>
+  	<url-pattern>/addcom</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>comp</servlet-name>
+  	<url-pattern>/comp</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>viewcom</servlet-name>
+  	<url-pattern>/viewcom</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>delemp</servlet-name>
+  	<url-pattern>/delemp</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>editemp</servlet-name>
+  	<url-pattern>/editemp</url-pattern>
   </servlet-mapping>
 </web-app>
